--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <title>Simple Markdown Viewer</title>
   </head>
   <body>
+      <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
